version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/CMGRPCommand.rst.txt
.. vale off



:class:`CMGRPCommand`
=====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.CMGRPCommand(iCMGRPCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ICMGRPCommand)

   Bases: :py:obj:`object`


   
   Represents a CMGRP command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CMGRPCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Aname`
            - Gets the assembly name.
          * - :py:attr:`~Cnames`
            - Gets the component and/or assembly names.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: Aname
   :type: Optional[str]


   
   Gets the assembly name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Cnames
   :type: Optional[tuple[str]]


   
   Gets the component and/or assembly names.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on